apps/shop/loadgenerator/k8s/overlays/non-prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shop-loadgenerator-dev
spec:
  host: shop-loadgenerator.shop-loadgenerator.svc.cluster.local
  subsets:
  - name: shop-loadgenerator-dev
    labels:
      app: shop-loadgenerator
      env: dev
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: shop-loadgenerator-dev-d1a
    labels:
      app: shop-loadgenerator
      env: dev
      deploy.cloud.google.com/target-id: d1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
